--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -79,6 +79,27 @@ textarea::-webkit-scrollbar{
   }
 }
 
+@layer components {
+  .btn-primary{
+    @apply px-3 py-1 text-white rounded border border-steel/25 bg-sea-600 hover:opacity-80 font-[family-name:var(--font-sourceSans3)]
+  }
+  .btn-secondary{
+    @apply px-3 py-1 rounded border border-steel/25 bg-teal-200 hover:opacity-80 font-[family-name:var(--font-sourceSans3)]
+  }
+  .btn-outline{
+    @apply px-3 py-1 rounded border border-steel/25 bg-transparent hover:bg-steel/10 text-steel font-[family-name:var(--font-sourceSans3)]
+  }
+  .btn-destructive{
+    @apply px-3 py-1 rounded border border-berry/25 bg-rose-600 text-white hover:opacity-80 font-[family-name:var(--font-sourceSans3)]
+  }
+  .btn-tertiary{
+    @apply px-3 py-1 rounded border border-berry/25 bg-rose-200 hover:opacity-80 font-[family-name:var(--font-sourceSans3)]
+  }
+  .nav-link{
+    @apply text-sm text-steel font-[family-name:var(--font-sourceSans3)] hover:underline underline-offset-4 hover:decoration-steel/50
+  }
+}
+
 textarea{
   height: 36px;
 }
